<resources>
    <string name="app_name">TemperatureApp</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="celsius">°C</string>
    <string name="fahrenheit">°F</string>
    <string name="info_loading">loading</string>
</resources>
