<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/background">

    <TextView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:id="@+id/tv_ambinet_temp"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="false"
        android:textStyle="bold"
        android:layout_alignParentStart="false"
        android:background="@drawable/circle"
        android:textAlignment="center"
        android:paddingTop="50dp"
        android:singleLine="false"
        android:layout_centerHorizontal="true"
        android:textColor="#0091ea"
        android:layout_marginTop="20dp"
        android:textSize="25sp" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:id="@+id/table_temperature"
        android:layout_below="@+id/tv_ambinet_temp"
        android:layout_marginTop="30dp"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/rectangle_with_corner"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_title_mon"
                android:gravity="center"
                android:text="@string/monday"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="#f44336" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_mon_temp"
                android:gravity="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="#f44336" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/rectangle_with_corner"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_title_tues"
                android:gravity="center"
                android:text="@string/tuesday"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="#ffc107" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_tues_temp"
                android:gravity="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="#ffc107" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/rectangle_with_corner"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_title_wed"
                android:gravity="center"
                android:text="@string/wednesday"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="#2196f3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_wed_temp"
                android:gravity="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="#2196f3" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/rectangle_with_corner"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_title_thurs"
                android:gravity="center"
                android:text="@string/thursday"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="#4caf50" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_thurs_temp"
                android:gravity="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="#4caf50" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|center_vertical"
            android:background="@drawable/rectangle_with_corner"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_title_fri"
                android:gravity="center"
                android:text="@string/friday"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="#9c27b0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_fri_temp"
                android:gravity="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="#9c27b0" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|right">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/btn_change_scale"
                android:checked="true"
                android:textOn="@string/celsius"
                android:showText="true"
                android:textOff="@string/fahrenheit" />
        </TableRow>

    </TableLayout>

</RelativeLayout>
